--- a/CollegeManager/Views/Home/Student.cshtml
+++ b/CollegeManager/Views/Home/Student.cshtml
@@ -47,7 +47,7 @@
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
                 <div class="modal-content" style="background: #0d1117;">
                     <div class="modal-header">
-                        <h3 style="color: #C9D1D9;">New Teacher</h3>
+                        <h3 style="color: #C9D1D9;">New Student</h3>
                     </div>
                     <div class="modal-body">
                         <form class="form-horizontal" name="AdicionarNovoFuncionarioForm">
@@ -56,19 +56,22 @@
                             </div>
 
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="description" placeholder="Description" style="width:100%;" />
+                                <input class="form-control" type="text" name="nome" ng-model="name" placeholder="Name" style="width:100%;" />
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="duration" placeholder="Duration" />
+                                <input class="form-control" type="date" name="nome" ng-model="birthday" placeholder="Birthday" />
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="text" name="nome" ng-model="minGrade" placeholder="Min. Grade" />
+                                <input class="form-control" type="text"  name="nome" ng-model="rgnumber" placeholder="Registration Number" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" type="text" name="nome" ng-model="courseid" placeholder="Course" />
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer" style="border: none;">
-                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addCourse()">Confirm</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="limparDados()">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addStudent()">Confirm</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearData()">Cancel</button>
                     </div>
                 </div>
             </div>
