--- a/CollegeManager/Views/Teacher/Index.cshtml
+++ b/CollegeManager/Views/Teacher/Index.cshtml
@@ -17,23 +17,16 @@
                 </tr>
             </thead>
             <tbody style="color: #8B949E; border: 0.2px solid #161b22;  ">
-                <tr ng-repeat="c in Teachers">
-                    <td class="text-center">{{c.TeacherId}}</td>
-                    <td class="text-center">{{c.Name}}</td>
-                    <td class="text-center">{{c.Birthday  | date : format : timezone}}</td>
-                    <td class="text-center">{{c.Salary  | currency : symbol : fractionSize}}</td>
+                <tr ng-repeat="t in Teachers">
+                    <td class="text-center">{{t.TeacherId}}</td>
+                    <td class="text-center">{{t.Name}}</td>
+                    <td class="text-center">{{t.Birthday  | date : format : timezone}}</td>
+                    <td class="text-center">{{t.Salary  | currency : symbol : fractionSize}}</td>
                     <td class="text-center" style="width: 150px; padding: 0.5%;">
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
-                           data-target="#AtualizarFuncionario"
-                           data-toggle="modal" class="btn btn-success"
-                           ng-click="atualizarFuncionarioPorId(func)">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#UpdateTeacher" data-toggle="modal" class="btn btn-success" ng-click="updateTeacherById(t)">
                             <span class="glyphicon glyphicon-pencil"></span>
                         </a>
-                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;"
-                           data-target="#ExcluirFuncionario"
-                           id="btnExcluir"
-                           data-toggle="modal" class="btn btn-danger"
-                           ng-click="excluirFuncionarioPorId(func)">
+                        <a href="#" style="border-radius: 25px; padding: 0.3em 0.6em; margin-right: 0.5em;" data-target="#DeleteTeacher" id="btnDelete" data-toggle="modal" class="btn btn-danger" ng-click="deleteTeacherById(t)">
                             <span class="glyphicon glyphicon-trash"></span>
                         </a>
                     </td>
@@ -41,12 +34,10 @@
             </tbody>
         </table>
 
-
-
         <div class="modal" id="AdicionarFuncionario" role="dialog" style="width: 100%; padding-top: 12rem;">
             <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
                 <div class="modal-content" style="background: #0d1117;">
-                    <div class="modal-header">
+                    <div class="modal-header" style="border: none;">
                         <h3 style="color: #C9D1D9;">New Teacher</h3>
                     </div>
                     <div class="modal-body">
@@ -68,60 +59,57 @@
                     </div>
                     <div class="modal-footer" style="border: none;">
                         <button type="button" class="btn btn-primary" id="btnSalvar" data-dismiss="modal" ng-click="addTeacher()">Confirm</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="limparDados()">Cancel</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clearData()">Close</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="modal" id="AtualizarFuncionario" role="dialog" style="margin-top: 11em;">
-            <div class="modal-dialog">
+        <div class="modal" id="UpdateTeacher" role="dialog" style="width: 100%; margin-top: 12rem;">
+            <div class="modal-dialog" style="width: 40%; margin-top: 4%;">
                 <div class="modal-content" style="background: #0d1117; color: whitesmoke;">
-                    <div class="modal-header">
-                        <h3 class="text-info">Edit Teacher</h3>
+                    <div class="modal-header" style="border: none;">
+                        <h3 style="color: #C9D1D9;">Update Teacher</h3>
                     </div>
                     <div class="modal-body" style="margin-left: 20px">
                         <form class="form-horizontal" name="AtualizarForm">
                             <div class="form-group">
-                                <input class="form-control" readonly="readonly" name="FuncionarioId" ng-model="AtualizadoFuncionarioId" type="hidden" placeholder="Funcionario Id" />
+                                <input class="form-control" readonly="readonly" name="TeacherId" ng-model="UpdatedTeacherId" type="hidden" placeholder="TeacherId" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Name</label>
-                                <input class="form-control" name="Nome" ng-model="AtualizadoNome" type="text" placeholder="Name" />
+                                <input class="form-control" name="Name" ng-model="UpdatedName" type="text" placeholder="Name" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Birthday</label>
-                                <input class="form-control" name="Email" ng-model="AtualizadoEmail" type="date" placeholder="Birthday" />
+                                <input class="form-control" name="Birthday" ng-model="UpdatedBirthday" type="date" placeholder="Birthday" />
                             </div>
                             <div class="form-group">
-                                <label class="text-info"> Salary</label>
-                                <input class="form-control" name="Departamento" ng-model="AtualizadoDepartamento" type="text" placeholder="Salary" />
+                                <input class="form-control" name="Salary" ng-model="UpdatedSalary" type="text" placeholder="Salary" />
                             </div>
                         </form>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" id="btnUpdate" data-dismiss="modal" ng-click="atualizarFuncionario()">
-                            Atualizar
+                    <div class="modal-footer" style="border: none;">
+                        <button type="button" class="btn btn-primary" id="btnUpdate" data-dismiss="modal" ng-click="updateTeacher()">
+                            Update
                         </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="modal" role="dialog" id="ExcluirFuncionario">
+        <div class="modal" role="dialog" id="DeleteTeacher" style="padding-top: 13em;">
             <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="text-info">Você tem certeza que deseja excluir o Funcionário?</h3>
+                <div class="modal-content" style="background: #0d1117;">
+                    <div class="modal-header" style="border: none;">
+                        <h3 class="text-info" style="color: white;">Are you sure you want to delete this teacher?</h3>
                     </div>
                     <div class="modal-body">
-                        <div>
-                            <p>Id do Funcionário : {{AtualizadoFuncionarioId}}</p>
-                            <p>Nome do Fucionário : {{AtualizadoNome}}</p>
+                        <div style="color: white; text-align: center;">
+                            <p>ID: {{UpdatedTeacherId}}</p>
+                            <p>Teacher's name: {{UpdatedName}}</p>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="excluirFuncionario(AtualizadoFuncionarioId)">Excluir</button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                    <div class="modal-footer" style="border: none;">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" ng-click="deleteTeacher(UpdatedTeacherId)">Delete</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
@@ -144,10 +132,12 @@
     ::-webkit-scrollbar-track {
         border-radius: 10px;
     }
+
     ::-webkit-scrollbar-thumb {
         background: #161b22;
         border-radius: 10px;
     }
+
         ::-webkit-scrollbar-thumb:hover {
             background: green;
         }
